<resources>
    <string name="app_name">Grocer Grocer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Action bar menus -->
    <string name="action_settings">Settings</string>
    <string name="action_shopping_cart">Shopping Cart</string>
    <string name="action_search">Search</string>
    <string name="action_calendar_go_to_today">Calendar Go To Today</string>
    <string name="action_collapse_calendar">Collapse Calendar</string>

    <!-- Screen label -->
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="my_account">My Account</string>
    <string name="edit_profile">Account Details</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="grocery_list">Grocery List</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="review_order">Review Your Order</string>
    <string name="order_confirmation">Order Confirmation</string>

    <!-- Navigation bar -->
    <string name="nav_user">Grocer Grocer</string>
    <string name="nav_email">grocergrocer.app@gmail.com</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_shopping_cart">Shopping Cart</string>
    <string name="nav_order_history">Order History</string>
    <string name="nav_grocery_list">Grocery List</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_logout">Logout</string>

    <!-- Login Activity -->
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="login_via_email">Login to shop via email</string>
    <string name="email">E-MAIL</string>
    <string name="facebook">FACEBOOK</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="skip">Skip</string>

    <!-- SignUp Activity -->
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>

    <!-- Search Activity -->
    <string name="no_results_found">No results found</string>

    <!-- Account Details Activity -->
    <string name="personal_information">Personal Information</string>
    <string name="update_password">Update Password</string>

    <!-- Shopping Cart Activity -->
    <string name="your_order">Your Order</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="fee">₱ 1000.00</string>

    <!-- Order History Activity -->
    <string name="status_closed">CLOSED</string>

    <!-- Delivery Address Activity -->
    <string name="mobile_number">Mobile No:</string>
    <string name="address_specific_instructions">Address Specific Instructions:</string>

    <!-- Review Order Activity -->
    <string name="delivery_information">Delivery Information</string>
    <string name="payment_information">Payment Information</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="payment">Payment</string>

    <!-- Order Confirmation Activity -->
    <string name="sent_sms_code">We have sent you an SMS with a code to this number: 0917 123 4567.</string>
    <string name="enter_activation_code">To complete your phone number verification, please enter the 6-digit activation code.</string>

    <!-- Product Activity -->
    <string name="about_the_product">About the Product</string>
    <string name="product_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pretium nisl vel lorem dignissim, vitae suscipit turpis aliquet. Nullam pulvinar mauris sit amet vehicula tincidunt. Nam luctus tellus vel molestie placerat.\n\n
        Praesent finibus felis nec tristique sollicitudin. Donec suscipit dolor lacus, sed sodales libero facilisis non. Nulla rhoncus, enim ac ultrices porttitor, ante nibh suscipit libero, vitae ornare tortor dolor facilisis felis.\n\n
        Nulla ornare pulvinar orci, eget pharetra eros auctor ut. Duis venenatis vitae risus vitae iaculis. Duis dignissim neque quis lorem laoreet, in aliquam ante elementum. Vivamus tortor nulla, sollicitudin et risus mattis, congue placerat lacus.\n\n
        Integer gravida vestibulum justo. Vivamus semper euismod mi ac auctor.
    </string>

    <!-- Grocery List Activity -->
    <string name="grocery_list_name">Name</string>
    <string name="grocery_list_description">Description (Optional)</string>
    <string name="grocery_list_default_description">Find all your saved products and past purchases here.</string>

    <!-- Dialogs -->
    <string name="dialog_create_grocery_list_title">Create a new list</string>

    <!-- Buttons -->
    <string name="btn_add_to_cart">Add To Cart</string>
    <string name="btn_login">Login</string>
    <string name="btn_save_to_list">Save To List</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">—</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="btn_update_password">Update Password</string>
    <string name="btn_add_different_address">Add Different Address</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_delivery_time">Delivery Time</string>
    <string name="btn_add">Add</string>
    <string name="btn_review_order">Review Your Order</string>
    <string name="btn_order_confirmation">Order Confirmation</string>
    <string name="btn_place_order">Place Your Order</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_resend_code">Resend Code</string>
    <string name="btn_keep_shopping">Keep Shopping</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_place_new_order">Place New Order</string>
    <string name="btn_cancel_order">Cancel Order</string>

    <!-- Prompts -->
    <string name="prompt_authenticating">Authenticating&#8230;</string>
    <string name="prompt_creating_account">Creating Account&#8230;</string>

    <!-- Errors -->
    <string name="err_invalid_name">at least 3 characters</string>
    <string name="err_invalid_email">enter a valid email address</string>
    <string name="err_invalid_password">between 4 and 10 alphanumeric characters</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_required">Required</string>

    <!-- Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_no">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_retype_new_password">Retype New Password</string>
    <string name="hint_search">Search</string>
    <string name="hint_complete_address">Complete Address</string>
    <string name="hint_complete_address_full">(House Number, Building and Street Name)</string>
    <string name="hint_province">Province</string>
    <string name="hint_city_municipality">City/Municipality</string>
    <string name="hint_barangay">Barangay</string>
    <string name="hint_address_specific_instructions">Address Specific Instructions</string>
    <string name="hint_activation_code">Activation Code</string>

    <!-- Others -->
    <string name="zero">0</string>
    <string name="peso_sign">₱</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="dash_separator"> - </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="account_placeholder">Account Placeholder</string>
</resources>
