<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:title="@string/nav_explore"
            android:icon="@mipmap/ic_explore_black" />
        <item
            android:id="@+id/nav_categories"
            android:title="@string/nav_categories"
            android:icon="@mipmap/ic_folder_black" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:title="@string/nav_shopping_cart"
            android:icon="@mipmap/ic_shopping_cart_black" />
        <item
            android:id="@+id/nav_order_history"
            android:title="@string/nav_order_history"
            android:icon="@mipmap/ic_history_black" />
        <item
            android:id="@+id/nav_grocery_list"
            android:title="@string/nav_grocery_list"
            android:icon="@mipmap/ic_list_black" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@mipmap/ic_exit_to_app_black" />
    </group>

</menu>
