<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_sms_code"
                android:layout_marginBottom="30dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_activation_code"
                android:layout_marginBottom="30dp"
                android:gravity="center" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_activation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/input_activation_code"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_activation_code"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_red_bg"
                android:text="@string/btn_submit"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_resend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_red_bg"
                android:text="@string/btn_resend_code"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>