<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_background"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:id="@+id/login_base_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/login_form_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/login_via_email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_form_email_btn"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/email"
            android:paddingEnd="32dp"
            android:paddingStart="16dp"
            android:text="@string/email"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_form_facebook"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_facebook_bg"
            android:drawableStart="@mipmap/facebook_icon"
            android:paddingEnd="32dp"
            android:paddingStart="16dp"
            android:text="@string/facebook"/>

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_form_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@mipmap/arrow_right_accent"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/login_form_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@mipmap/arrow_right_accent"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>